 - Nerfed Bat's ATK from 17 to 15.
 - Increased price of Metal Wristbraces ★ from 180B to 300B.
 - Gave Bloodlust +2% PLS.
 - Nerfed CRI of Red Mask from +2% to +1%.
 - Reworked Blood-Red Headband to grant +0.5% PLS and +3 AGI rather than +4% MHP and +3% CRI. Price has increased from 80B to 120B
 - Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
 - Ethers no longer require Bits to craft. Their price has been adjusted accordingly.
 - Buffed the Knight's Greaves' DEF by 1 and AGI by 2 and also gave them +0.5% EVA and +0.5% CRI to be able to compete with the Leather Boots.
 - All levels of Well Fed increase ATK and MAT by +2%, +4%, and +6% at each respective level (respectively).
 - Increased Player 1's base MHP at levels 1 and 2 from [40, 48] to [48, 54].
 - Replaced The Warden's Darkfire with Engulfing Darkness, which is mechanically the same skill except it does not debuff MDF.
 - Greatly increased the acceleration of the EXP curve at later levels. This barely affects the game in its current state considering the level cap is 25, but this change will help future proof the late- and end-game.
 - Many other small changes have been made to equipment/item stats, prices, and crafting recipes, as well as enemy stats/drops.

Bug Fixes:
 - Fixed a game-breaking bug that I could have sworn was already fixed where you could push a boulder in Laeryidyean's Forest - Left Connector off the boulder tiles.
 - Fixed several bugs with many states such as inconsistencies between regeneration effects, poison map damage not functioning as intended, and unused states doubling the effects of some traits.
 - Fixed a bug where conditional drops did not work correctly (e.g. night boosted enemies did not properly increase their item drop rate).
 - Fixed a bug where the critical hit formula wasn't done correctly, resulting in critical evasion being basically a useless stat.