@@ -2186,7 +2186,7 @@
         "value": 1
       }
     ],
-    "gold": 20,
+    "gold": 25,
     "name": "Red Slime",
     "note": "<AI Priority>\nState === Confused: Purify\nState === Poisoned: Purify\nState === Paralyzed: Purify\n</AI Priority>\n\n<Steal Item 81: 100%>\n<Steal Item 19: 75%>\n<Steal Item 33: 75%>\n<Attack Animation: 3>\n<Element Absorb: 2>\n\n<Enemy Drops>\nRed Gel: 50%\nFulfilling Ration: 16.66%\nElixir: 7.5%\nSlime Scarf: 2%\nCondensed Red Gel: 5%\nFire Essence: 20%\nCopper Cluster: 50%\nIron Cluster: 33.3%\nHeedup Berry: 10%\n</Enemy Drops>",
     "params": [
@@ -2280,7 +2280,7 @@
         "value": 1.5
       }
     ],
-    "gold": 30,
+    "gold": 40,
     "name": "Bat",
     "note": "<Floating>\n<LowHpGround>\n<Attack Animation: 211>\n<Sideview Battler: Monster1_1>\n<Element Absorb: 7>\n\n<Enemy Drops>\nBat Wing: 50%\nBat Wing: 33.33%\nStorm Lens: 2%\nShard of Glass: 0.5%\nEnchanted Bat Skin: 5%\nWind Essence: 20%\nCopper Cluster: 50%\nIron Cluster: 33.3%\nHeedup Berry: 10%\n</Enemy Drops>",
     "params": [
@@ -2391,7 +2391,7 @@
         "value": 2
       }
     ],
-    "gold": 36,
+    "gold": 45,
     "name": "Skeleton Knight",
     "note": "<Steal Item 71: 33%>\n<Steal Item 72: 20%>\n<Sideview Battler: Monster2_5>\n<Weapon Image: 2>\n<Attack Animation: 6>\n\n<Enemy Drops>\nMusic Box: 2%\nSkeleton Skull: 20%\nSmall Ether: 8.33%\nEther: 4%\nEmerald Ring: 5%\nDark Essence: 20%\nMalicious Essence: 10%\n</Enemy Drops>\n<Conditional Skeleton Skull Drop>\nSwitch 69 ON: +30%\n</Conditional Skeleton Skull Drop>\n<Conditional Small Ether Drop>\nSwitch 69 ON: +8.33%\n</Conditional Small Ether Drop>\n<Conditional Ether Drop>\nSwitch 69 ON: +2%\n</Conditional Ether Drop>\n<Conditional Emerald Ring Drop>\nSwitch 69 ON: +2.5%\n</Conditional Emerald Ring Drop>\n<Conditional Dark Essence Drop>\nSwitch 69 ON: +20%\n</Conditional Dark Essence Drop>\n<Conditional Malicious Essence Drop>\nSwitch 69 ON: +10%\n</Conditional Malicious Essence Drop>",
     "params": [
@@ -2488,7 +2488,7 @@
         "value": 2
       }
     ],
-    "gold": 25,
+    "gold": 45,
     "name": "Lost Soul",
     "note": "<AI Priority>\nState === Silenced: Purify\nRandom 30% +++ State !== Magical Barrier: Shield of Faith, Lowest HP\nRandom 30% +++ HP% param <= 50%: Cure II, Lowest HP%\nRandom 60% +++ State !== Blinded: Dark Orb\n</AI Priority>\n\n<Boost Skill 12: Full>\n\n<Floating>\n<Sideview Battler: Monster1_7>\n<Sideview No Collapse>\n<Attack Animation: 135>\n\n<Enemy Drops>\nPocket Mirror: 2%\nJade Charm: 2%\nDark Essence: 20%\nMalicious Essence: 10%\n</Enemy Drops>\n<Conditional Jade Charm Drop>\nSwitch 69 ON: +1%\n</Conditional Jade Charm Drop>\n<Conditional Dark Essence Drop>\nSwitch 69 ON: +20%\n</Conditional Dark Essence Drop>\n<Conditional Malicious Essence Drop>\nSwitch 69 ON: +10%\n</Conditional Malicious Essence Drop>",
     "params": [
@@ -2634,7 +2634,7 @@
         "value": 3
       }
     ],
-    "gold": 600,
+    "gold": 900,
     "name": "The Warden",
     "note": "<AI Priority>\nState === Bleeding +++ User HP% param >= 33%: Purify, User\nState === Poisoned +++ User HP% param >= 33%: Purify, User\n</AI Priority>\n\n<Sideview Battler: Evil1_4>\n<Attack Animation: 6>\n<Weapon Image: 229>\n<HP Gauge Width: 216>\n\n<Enemy Drops>\nThe Warden's Trade-off: 100%\nThe Warden's Belt: 100%\nShadowplate Armor: 100%\nPhantasmal Robes: 100%\nPrayer Vestments ★: 100%\nShadowspec Leathers: 100%\nPhantasmal Scarf: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\nMalicious Essence: 100%\n</Enemy Drops>",
     "params": [
@@ -2738,7 +2738,7 @@
         "value": 2
       }
     ],
-    "gold": 20,
+    "gold": 30,
     "name": "Suffering Soul",
     "note": "<AI Priority>\nState === Silenced: Purify\nRandom 30% +++ State !== Magical Barrier: Shield of Faith, Lowest HP\nRandom 30%: Cure I, Lowest HP%\nState !== Blinded: Dark Orb\n</AI Priority>\n\n<Boost Skill 12: Full>\n\n<Floating>\n<Sideview Battler: NoMatchingSprite/Suffering Soul>\n<Sideview No Collapse>\n<Attack Animation: 133>\n\n<Enemy Drops>\nPocket Mirror: 2%\nJade Charm: 1%\nNecrotic Skull: 5%\nDark Essence: 20%\nMalicious Essence: 10%\n</Enemy Drops>\n<Conditional Jade Charm Drop>\nSwitch 69 ON: +0.5%\n</Conditional Jade Charm Drop>\n<Conditional Necrotic Skull Drop>\nSwitch 69 ON: +2.5%\n</Conditional Necrotic Skull Drop>\n<Conditional Dark Essence Drop>\nSwitch 69 ON: +20%\n</Conditional Dark Essence Drop>\n<Conditional Malicious Essence Drop>\nSwitch 69 ON: +10%\n</Conditional Malicious Essence Drop>",
     "params": [
