@@ -342,6 +342,7 @@ Balancing:
  - Nerfed CRI of Red Mask from +2% to +1%.
  - Reworked Blood-Red Headband to grant +0.5% PLS and +3 AGI rather than +4% MHP and +3% CRI. Price has increased from 80B to 120B
  - Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
+ - Greatly increased Bit drops from all Blazing Sands enemies to account for high shop prices in Telluria Castle Town.
  - Ethers no longer require Bits to craft. Their price has been adjusted accordingly.
  - Buffed the Knight's Greaves' DEF by 1 and AGI by 2 and also gave them +0.5% EVA and +0.5% CRI to be able to compete with the Leather Boots.
  - All levels of Well Fed increase ATK and MAT by +2%, +4%, and +6% at each respective level (respectively).
